# RunnerPost

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: ci.yml  pypi.yml
example/: .gitignore  algo_selection  output_selection  problem_selection
example/Book_Example/: algo_selection.def  output_selection.def  post_selection.json  pp1.txt  pp3.txt  problem_selection.def
example/Book_Example/Algo_1/1/: history.0.txt
example/Book_Example/Algo_1/10/: history.0.txt
example/Book_Example/Algo_1/11/: history.0.txt
example/Book_Example/Algo_1/12/: history.0.txt
example/Book_Example/Algo_1/13/: history.0.txt
example/Book_Example/Algo_1/14/: history.0.txt
example/Book_Example/Algo_1/15/: history.0.txt
example/Book_Example/Algo_1/16/: history.0.txt
example/Book_Example/Algo_1/17/: history.0.txt
example/Book_Example/Algo_1/18/: history.0.txt
example/Book_Example/Algo_1/19/: history.0.txt
example/Book_Example/Algo_1/2/: history.0.txt
example/Book_Example/Algo_1/20/: history.0.txt
example/Book_Example/Algo_1/3/: history.0.txt
example/Book_Example/Algo_1/4/: history.0.txt
example/Book_Example/Algo_1/5/: history.0.txt
example/Book_Example/Algo_1/6/: history.0.txt
example/Book_Example/Algo_1/7/: history.0.txt
example/Book_Example/Algo_1/8/: history.0.txt
example/Book_Example/Algo_1/9/: history.0.txt
example/Book_Example/Algo_2/1/: history.0.txt
example/Book_Example/Algo_2/10/: history.0.txt
example/Book_Example/Algo_2/11/: history.0.txt
example/Book_Example/Algo_2/12/: history.0.txt
example/Book_Example/Algo_2/13/: history.0.txt
example/Book_Example/Algo_2/14/: history.0.txt
example/Book_Example/Algo_2/15/: history.0.txt
example/Book_Example/Algo_2/16/: history.0.txt
example/Book_Example/Algo_2/17/: history.0.txt
example/Book_Example/Algo_2/18/: history.0.txt
example/Book_Example/Algo_2/19/: history.0.txt
example/Book_Example/Algo_2/2/: history.0.txt
example/Book_Example/Algo_2/20/: history.0.txt
example/Book_Example/Algo_2/3/: history.0.txt
example/Book_Example/Algo_2/4/: history.0.txt
example/Book_Example/Algo_2/5/: history.0.txt
example/Book_Example/Algo_2/6/: history.0.txt
example/Book_Example/Algo_2/7/: history.0.txt
example/Book_Example/Algo_2/8/: history.0.txt
example/Book_Example/Algo_2/9/: history.0.txt
example/Book_Example/Algo_3/1/: history.0.txt
example/Book_Example/Algo_3/10/: history.0.txt
example/Book_Example/Algo_3/11/: history.0.txt
example/Book_Example/Algo_3/12/: history.0.txt
example/Book_Example/Algo_3/13/: history.0.txt
example/Book_Example/Algo_3/14/: history.0.txt
example/Book_Example/Algo_3/15/: history.0.txt
example/Book_Example/Algo_3/16/: history.0.txt
example/Book_Example/Algo_3/17/: history.0.txt
example/Book_Example/Algo_3/18/: history.0.txt
example/Book_Example/Algo_3/19/: history.0.txt
example/Book_Example/Algo_3/2/: history.0.txt
example/Book_Example/Algo_3/20/: history.0.txt
example/Book_Example/Algo_3/3/: history.0.txt
example/Book_Example/Algo_3/4/: history.0.txt
example/Book_Example/Algo_3/5/: history.0.txt
example/Ch4/1/: README.txt  algo_selection.def  ap.txt  output_selection.def  output_selection_2.def  output_selection_accuracy.def  pp1.txt
example/Ch4/2/: algo_selection.def  output_selection.def  problem_selection.def
example/Paper_Example_DP/: problem_selection.def
example/Paper_Example_DP/Algo_1/: stats.11.txt  stats.12.txt  stats.13.txt  stats.15.txt  stats.20.txt  stats.23.txt  stats.28.txt  stats.29.txt  stats.37.txt  stats.40.txt  stats.42.txt  stats.45.txt  stats.46.txt  stats.54.txt  stats.62.txt  stats.63.txt  stats.66.txt  stats.71.txt
example/Paper_Example_DP/Algo_2/: stats.10.txt  stats.11.txt  stats.14.txt  stats.16.txt  stats.21.txt  stats.24.txt  stats.25.txt  stats.26.txt  stats.32.txt  stats.34.txt  stats.35.txt  stats.38.txt  stats.40.txt  stats.41.txt  stats.43.txt  stats.45.txt  stats.47.txt  stats.5.txt  stats.56.txt  stats.59.txt  stats.62.txt  stats.65.txt  stats.67.txt  stats.78.txt
example/Paper_Examples/Convergence plots/: algo_selection.def  output_selection.def
example/Paper_Examples/Data profiles/: algo_selection.def
example/Paper_Examples/Performance profiles/: output_selection.def
example/SingleObjectiveWithConstraints/: algo_selection.def  output_selection.def  problem_selection.def
example/SingleObjectiveWithHardConstraints/: algo_selection.def  output_selection.def  pp1.txt
example/Unconstrained_Runs_With_Two_Algos/: output_selection.def  post_selection.json  pp1.txt  problem_selection
pythonInterface/: .gitignore  CMakeLists.txt  CONTRIBUTING.md  MANIFEST.in  README.md  RunnerPostCythonInterface.cpp  long_description.md  pyproject.toml  readme.txt  runnerPost.pyx  setup.py
pythonInterface/RunnerPost/: __init__.py  __main__.py  postProcess.py
pythonInterface/RunnerPost/Data/: post_selection.json
pythonInterface/RunnerPost/Data/Algo_2/1/: stats.1.txt
pythonInterface/RunnerPost/Data/Algo_2/13/: stats.1.txt
pythonInterface/RunnerPost/Data/Algo_2/14/: stats.0.txt
pythonInterface/RunnerPost/Data/Algo_2/15/: stats.0.txt
pythonInterface/RunnerPost/Data/Algo_2/17/: stats.2.txt
pythonInterface/RunnerPost/Data/Algo_2/20/: stats.2.txt
pythonInterface/RunnerPost/Data/Algo_2/3/: stats.0.txt
pythonInterface/RunnerPost/Data/Algo_2/5/: stats.2.txt
pythonInterface/RunnerPost/Data/Algo_2/6/: stats.2.txt
pythonInterface/RunnerPost/Data/Algo_2/8/: stats.2.txt
pythonInterface/tests/: postProcess.py  test_simple.py
src/: AlgoParameters.cpp  AlgoParameters.hpp  Algorithm.cpp  Algorithm.hpp  ArrayOfString.cpp  ArrayOfString.hpp  CMakeLists.txt  CMakeListsExe.txt  CMakeListsLibs.txt  CMakeListsLibsStatic.txt  Ouptut.cpp  Output.cpp  Output.hpp  Problem.cpp  Problem.hpp  Result.cpp  Result.hpp  Runner.cpp  Runner.hpp  Utils.cpp  Utils.hpp  main.cpp  runner_defines.hpp  runnerpost_nsbegin.hpp  runnerpost_platform.hpp  runnerpost_version.hpp
tests/: CMakeLists.txt  test_algorithm.cpp  test_output.cpp  test_problem.cpp  test_runner.cpp
(+321 files in other folders)
