[project]
name = "RunnerPost"
version = "1.0b1"
authors = [
  { name = "Christophe Tribes" },
]
maintainers = [
  { name = "Christophe Tribes", email="christophe.tribes@polymtl.ca"},
]
description = "RunnerPost Python interface and script"
readme = { file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/bbopt/RunnerPost"
"Bug Tracker" = "https://github.com/bbopt/RunnerPost/issues"

[build-system]
requires = [
  'setuptools',
  'cython',
  'wheel'
]
